--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -7,7 +7,7 @@
     justify-content:center;
 }
 .content-wrapper{
-    padding: 50px !important;
+    padding: 20px 50px !important;
 }
 .number-string{
     font-size: 60px !important;
