--- a/src/Components/Cards/Card.css
+++ b/src/Components/Cards/Card.css
@@ -1,5 +1,5 @@
 .content-wrapper{
-    padding: 50px !important;
+    padding: 20px 50px !important;
 }
 .number-string{
     font-size: 60px !important;
