--- a/src/Components/Cards/Card.css
+++ b/src/Components/Cards/Card.css
@@ -1,8 +1,20 @@
 .content-wrapper{
     padding: 20px 50px !important;
+   
+    
+   
+    
+}
+.content-wrapper-card{
+    padding: 20px 50px !important;
+    display:flex;
+    flex: auto;
+    flex-wrap: wrap;
+    gap: 30px;
+    
 }
 .number-string{
-    font-size: 60px !important;
+    font-size: 20px !important;
     color: #1f77b4 !important;
 }
 .ant-layout-content{
@@ -12,4 +24,21 @@
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 border-radius: 30px !important
  ;
+}
+.profile{
+    width:100px;
+height:100px;
+border-radius: 50px;
+}
+.side-card{
+    max-width:390px;
+    min-width:350px;
+    margin:0px;
+
+}
+.side-card .ant-card{
+    max-width:390px !important;
+    min-width:350px !important;
+    margin:0px !important;
+
 }
